# zechub

./: update.md
Hackathon/2026/Cyze/src-tauri/: Cargo.toml  tauri.conf.json
Hackathon/2026/Cyze/src-tauri/core/: Cargo.toml
Hackathon/2026/Cyze/src-tauri/icons/: icon.icns
Hackathon/2026/Cyze/src-tauri/src/: error.rs  lib.rs  main.rs  sidecar.rs  state.rs  tunnel.rs
Hackathon/2026/Cyze/src-tauri/tests/: smoke.rs
Hackathon/2026/Paypunk/: .gitignore  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  devenv.nix
Hackathon/2026/Paypunk/.github/workflows/: ci.yml  pages.yml
Hackathon/2026/Paypunk/adr/: 001-ipc-auth-model.md
Hackathon/2026/Paypunk/api/: Cargo.toml
Hackathon/2026/Paypunk/api/src/: client.rs  functions.rs  lib.rs
Hackathon/2026/Paypunk/bridge/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  qr-display.js  qr-scan.js  qr-transport.js  vite.config.js
Hackathon/2026/Paypunk/bridge/src/: bridge.html  lib.rs
Hackathon/2026/Paypunk/cli/: Cargo.toml
Hackathon/2026/Paypunk/cli/src/: main.rs
Hackathon/2026/Paypunk/config/: Cargo.toml
Hackathon/2026/Paypunk/config/src/: lib.rs
Hackathon/2026/Paypunk/docs/: _config.yml  book.toml
Hackathon/2026/Paypunk/docs/src/: ADD_PROTOCOL.md  ARCHITECTURE.md  BRIDGE.md  CLI.md  CONTEXT.md  CONTRIBUTING.md  PRD.md  README.md  SECURITY.md  SUMMARY.md
Hackathon/2026/Paypunk/ipc/: Cargo.toml
Hackathon/2026/Paypunk/ipc/src/: lib.rs  messages.rs  receiver.rs  sender.rs  transport.rs
Hackathon/2026/Paypunk/ipc/tests/: ipc_test.rs
Hackathon/2026/Paypunk/keypunkd/: Cargo.toml
Hackathon/2026/Paypunk/keypunkd/src/: crypto.rs  errors.rs  key.rs  keypunk.rs  keypunkd.rs  lib.rs  messages.rs  protocol.rs  run.rs  seed_store.rs  services.rs  usecases.rs
Hackathon/2026/Paypunk/keypunkd/tests/: generate_seed_test.rs
Hackathon/2026/Paypunk/logo/: Cargo.toml
Hackathon/2026/Paypunk/logo/src/: lib.rs  main.rs
Hackathon/2026/Paypunk/paypunkd/: Cargo.toml
Hackathon/2026/Paypunk/paypunkd/src/: config.rs  lib.rs  messages.rs  paypunk.rs  paypunkd.rs  protocol_service.rs  run.rs  services.rs  usecases.rs
Hackathon/2026/Paypunk/ping/: Cargo.toml
Hackathon/2026/Paypunk/ping/src/: main.rs
Hackathon/2026/Paypunk/pong/: Cargo.toml
Hackathon/2026/Paypunk/pong/src/: lib.rs
Hackathon/2026/Paypunk/project/: ralph.md  ralph.sh
Hackathon/2026/Paypunk/protocols/ethereum/: Cargo.toml
Hackathon/2026/Paypunk/protocols/zcash/: Cargo.toml
Hackathon/2026/Paypunk/scripts/: get-balance.sh  key-daemon.sh  mine-block.sh  paypunk.sh  setup-test-wallet.sh  start-ethereum.sh  start-zcash.sh  ui.sh  wallet-daemon.sh
Hackathon/2026/Paypunk/scripts/tests/: test_balance.sh  test_list_accounts.sh  test_transfer.sh
Hackathon/2026/Paypunk/signer/: .envrc  .gitignore  KNOWN_ISSUES.md  README.md  dev.sh  devenv.nix  devenv.yaml  index.html  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
Hackathon/2026/Paypunk/signer/src/: App.tsx  backend.ts  crypto.ts  main.tsx  nav.tsx  qr-display.ts  qr-scan.ts  qr-transport.ts
Hackathon/2026/Paypunk/signer/src-tauri/: Cargo.toml  tauri.conf.json
Hackathon/2026/Paypunk/support/ethereum/: README.md  docker-compose.yml
Hackathon/2026/Paypunk/support/zcash/: Makefile  README.md  docker-compose.yml  fund.sh  mine.sh  zcash.sh
Hackathon/2026/Paypunk/tests/: Cargo.toml
Hackathon/2026/Paypunk/tests/tests/: integration_test.rs  pczt_test.rs
Hackathon/2026/Paypunk/tools/derive-orchard/: Cargo.toml
Hackathon/2026/Paypunk/tui/: Cargo.toml  Cargo.toml.bak  DEPENDENCY_CONFLICT.md
Hackathon/2026/Paypunk/tui/src/: app.rs  lib.rs  main.rs  ui.rs
Hackathon/2026/Paypunk/types/: Cargo.toml
Hackathon/2026/Paypunk/types/src/: caip.rs  lib.rs
Hackathon/2026/Steward/: .gitignore  Cargo.toml  LICENSE  README.md
Hackathon/2026/Steward/crates/steward-cli/: Cargo.toml
Hackathon/2026/Steward/crates/steward-coordinator/: Cargo.toml
Hackathon/2026/Steward/crates/steward-core/: Cargo.toml
Hackathon/2026/Steward/crates/steward-ffi/: Cargo.toml  README.md
Hackathon/2026/Steward/crates/steward-guardian-wasm/: Cargo.toml
Hackathon/2026/Steward/crates/steward-signer/: Cargo.toml
Hackathon/2026/Steward/crates/steward-testvectors/: Cargo.toml
Hackathon/2026/Steward/docs/: DEMO.md  INTEGRATION.md  PROTOCOL.md  SELF-HOST.md  SPEC.md
Hackathon/2026/Steward/scripts/: demo-lifecycle.sh  dev.sh
Hackathon/2026/Steward/web/: DESIGN.md
Hackathon/2026/Steward/web/guardian/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Hackathon/2026/Steward/web/owner-console/: index.html  package-lock.json  package.json  vite.config.ts
Hackathon/2026/Steward/web/shared/: tokens.css
Hackathon/2026/Steward/web/steward/: index.html  package-lock.json  package.json  vite.config.ts
Hackathon/2026/Turnstile/: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  README.md  fly.toml
Hackathon/2026/Turnstile/.github/workflows/: ci.yml
Hackathon/2026/Turnstile/cli/: Cargo.toml
Hackathon/2026/Turnstile/cli/src/: main.rs
Hackathon/2026/Turnstile/core/: Cargo.toml
Hackathon/2026/Turnstile/core/src/: chain.rs  indexer.rs  lib.rs  memo.rs  pools.rs  scan.rs  tip.rs  verdict.rs  watcher.rs  zingo.rs
Hackathon/2026/Turnstile/frontend/: package-lock.json  package.json  vitest.config.ts
Hackathon/2026/Turnstile/frontend/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx
Hackathon/2026/Turnstile/frontend/content/: readiness.json
Hackathon/2026/Turnstile/frontend/lib/: chain.test.ts  chain.ts  constants.ts  format.test.ts  format.ts  keycheck.test.ts  keycheck.ts  keys.test.ts  keys.ts  pools.ts  rateLimit.test.ts  rateLimit.ts  types.ts  useChainStatus.ts  verdict.ts  zip321.test.ts  zip321.ts
Hackathon/2026/Turnstile/keycheck/: Cargo.toml
Hackathon/2026/Turnstile/keycheck/src/: lib.rs
Hackathon/2026/Turnstile/scanner/: Cargo.toml  Dockerfile  fly.toml
Hackathon/2026/Turnstile/scanner/src/: alerts.rs  jobs.rs  main.rs  (+1 more)
Hackathon/2026/frostvault/backend/: Cargo.toml
(+4420 files in other folders)
