[workspace]
resolver = "3"
members = ["core", "scanner", "cli"]
exclude = ["keycheck"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Enoch208/turnstile"

[workspace.dependencies]
turnstile-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
