[package]
name = "paypunk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
paypunkd.workspace = true
paypunk-types.workspace = true
paypunk-chains-zcash.workspace = true
paypunk-chains-ethereum.workspace = true
keypunkd.workspace = true
paypunk-ipc.workspace = true
tactix.workspace = true
zeroize.workspace = true
argon2.workspace = true
hex.workspace = true
bip39 = { workspace = true, features = ["rand"] }
