[package]
name = "paypunkd"
version = "0.1.0"
edition = "2021"

[dependencies]
paypunk-config.workspace = true
paypunk-ipc.workspace = true
paypunk-types.workspace = true
paypunk-chains-zcash.workspace = true
paypunk-chains-ethereum.workspace = true
keypunkd.workspace = true
tactix.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "signal"] }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true, features = ["alloc"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rusqlite = { workspace = true, features = ["bundled"] }
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
rand_core = { workspace = true, default-features = false, features = ["getrandom"] }
tempfile.workspace = true
async-trait.workspace = true
blake2.workspace = true
