[package]
name = "turnstile-keycheck"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Structural Zcash unified viewing key inspection, compiled to WebAssembly so keys are validated in the browser before anything leaves it."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zcash_address = "0.12"
zcash_protocol = { version = "0.9", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
