[package]
name = "frostvault-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
reddsa = { version = "0.5.2", features = ["frost"] }
frost-rerandomized = "3.0.0"
rand = "0.8"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
