[package]
name = "zecauth-cli"
version = "0.1.0"
edition = "2021"
description = "ZecAuth CLI demo wallet"
license = "MIT"

[dependencies]
zecauth-core = { path = "../zecauth-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6"
